Merged revisions 82552-82553 via svnmerge from svn+ssh://pythondev@svn.python.org/python/branches/py3k

........
  r82552 | mark.dickinson | 2010-07-04 19:11:51 +0100 (Sun, 04 Jul 2010) | 2 lines

  Issue #9130: Fix validation of relative imports in parser module.
........
  r82553 | mark.dickinson | 2010-07-04 19:15:26 +0100 (Sun, 04 Jul 2010) | 1 line

  Fix symbol numbers in test_parser test.
........